# backcocktails

./: .gitignore  manage.py  pyproject.toml
coctails/: asgi.py  settings.py  urls.py  wsgi.py
constructor/: admin.py  models.py  serializers.py  urls.py  views.py
constructor/migrations/: 0001_initial.py  0002_alter_recipe_rating.py  0003_cocktail_rename_recipeingredient_cocktailingredient_and_more.py  0004_rename_recipe_id_cocktailingredient_cocktail_id_and_more.py  0005_remove_cocktail_difficulty_remove_cocktail_prep_time_and_more.py  0006_remove_ingredient_ingredientcategory_id_and_more.py  0007_ingredient_image.py
